Enhances DOM error handling by implementing fallback JavaScript evaluation when CDP DOM queries fail with protocol exceptions
Centralizes logging configuration to prevent duplicate setup across modules

Adds comprehensive VS Code debug configurations for running scraper, main module, and tests

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ chromedriver.exe
 venv
 src/forexfactory/__pycache__/*
 */__pycache__/*
+*.csv
+forexfactory_debug_*
+src/forexfactory/utils/__pycache__/*
+src/forexfactory_scraper.egg-info/PKG-INFO
