--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,12 @@ authors = [
 ]
 
 dependencies = [
-	selenium==4.27.1,
-	nodriver,
-	python-dateutil==2.8.2,
-	tzdata==2024.2,
-	pandas==2.2.0
+	"selenium",
+	"nodriver",
+	"python-dateutil",
+	"tzdata",
+	"pandas",
+	"rich>=14.1.0",
 ]
 
 [project.urls]
