Refactors project structure and adds shared dependency
Reorganizes utilities into proper package structure by moving CSV utilities and logging configuration to dedicated utils package.

Adds forex-common as editable dependency (to enable shared data models and types across forex-related projects) and configures VS Code to include the shared dependency in Python analysis paths.

Reduces logging verbosity for third-party libraries and improves debug output formatting.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
 	"tzdata",
 	"pandas",
 	"rich>=14.1.0",
+	"forex-common",
 ]
 
 [project.urls]
@@ -27,3 +28,6 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.uv.sources]
+forex-common = { path = "../forex_common", editable = true }
