--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "python.defaultInterpreterPath": "${workspaceFolder}/.venv/Scripts/python.exe",
   "python.testing.pytestEnabled": true,
   "python.testing.pytestArgs": ["tests"],
-  "python.analysis.extraPaths": ["src"]
+  "python.analysis.extraPaths": ["src","${workspaceFolder}/../forex_common"
+  ]
 }
